Created swagger.yml for swagger ui
