# src/routes/ticketRoute.js
@@ -3,7 +3,7 @@ import Router from "express";
 import jwt from "jsonwebtoken";
 
 // Import the displayTicket and buyTicket functions from the ticketController.js file.
-import { displayTicket, buyTicket, cancelTicket } from "../controllers/ticketController.js";
+import { displayTicket, displayAllFlights, buyTicket, cancelTicket } from "../controllers/ticketController.js";
 
 // Import the dotenv
 import dotenv from "dotenv";
@@ -12,7 +12,7 @@ dotenv.config();
 const router = Router();
 
 const verifyToken = (req, res, next) => {
-  const token = req.header("Authorization");
+  const token = req.header("Authorization").split(" ")[1];
   if (!token) return res.status(401).json({ error: "Unauthorized" });
 
   jwt.verify(token, process.env.SECRET_KEY, (err, user) => {
@@ -21,8 +21,8 @@ const verifyToken = (req, res, next) => {
     next();
   });
 };
-
-router.get("/", displayTicket);
+router.get("/:date/:fromLocation/:toLocation/:numberOfPeople", displayTicket);
+router.get("/flights", displayAllFlights);
 router.post("/buyticket", verifyToken, buyTicket);
 router.delete("/cancelticket", verifyToken, cancelTicket);
 
